--- a/config.toml
+++ b/config.toml
@@ -217,12 +217,12 @@ defaultContentLanguageInSubdir = false
   [[params.social]]
     icon = "envelope"
     icon_pack = "fa"
-    link = "mailto:test@example.org"
+    link = "mailto:nafraz@tcd.ie"
 
   [[params.social]]
     icon = "twitter"
     icon_pack = "fa"
-    link = "//twitter.com/nimaafraz"
+    link = "//twitter.com/nimafraz"
 
   [[params.social]]
     icon = "google-scholar"
