--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ defaultContentLanguageInSubdir = false
   office_hours = "Monday-Fiday 8:00 to 20:00 or email for appointment"
   phone = "+353 87 0951736"
   skype = "nimaafraz"
-  telegram = "@nimaafraz"
+  telegram = "nimaafraz"
 
   # Enable Keybase in Contact widget by entering your keybase.io username.
   keybase = ""
